# Imath

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .mailmap  .readthedocs.yml  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  INSTALL.md  Imath.pc.in  README.md  SECURITY.md  appveyor.yml  pyproject.toml  sonar-project.properties
ImathTest/: CMakeLists.txt  testBox.cpp  testBox.h  testColor.cpp  testFrustum.cpp  testFun.cpp  testJacobiEigenSolver.cpp  testJacobiEigenSolver.h  testMatrix.cpp  testMatrix.h  testMiscMatrixAlgo.h  testProcrustes.cpp  testQuat.cpp  testQuatSetRotation.cpp  testRandom.h  testRoots.h  testShear.h  testVec.h
config/: CMakeLists.txt  IlmBaseSetup.cmake  Imath.pc.in  ImathConfig.cmake.in  ImathConfig.h.in  ImathConfig.h.in_cmake  ImathConfigInternal.h.in  ImathConfigInternal.h.in_cmake  ImathSetup.cmake  LibraryDefine.cmake  ModuleDefine.cmake  configure.cmake  version.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  PortingGuide.rst  PortingGuide2-3.md  SymbolVisibility.rst  about.rst  box.rst  classes.rst  color.rst  concepts.rst  conf.py  conf.py.in  euler.rst  fixmanpages.sh  float.rst  frame.rst  frustum.rst  genindex.rst  gl.rst  glu.rst  half.rst  half_conversion.rst  half_limits.rst  index.rst  install.rst  interval.rst  intro.rst  limits.rst  matrix.rst  plane.rst  quat.rst  random.rst  requirements.txt  roots.rst  shear.rst  sphere.rst  toc_redirect.rst  vec.rst
docs/classes/: Box.rst  Color3.rst  Color4.rst  Euler.rst  Frustum.rst  Interval.rst  Line3.rst  Matrix22.rst  Matrix33.rst  Matrix44.rst  Plane3.rst  Quat.rst  Rand32.rst  Rand48.rst  Shear6.rst  Sphere3.rst  Vec2.rst  Vec3.rst  Vec4.rst  float.rst  half.rst  half_class.rst
docs/examples/: Box.cpp  CMakeLists.txt  Color3.cpp  Color4.cpp  Euler.cpp  Frustum.cpp  Interval.cpp  Line3.cpp  Matrix22.cpp  Matrix33.cpp  Matrix44.cpp  Plane3.cpp  Quat.cpp  Shear6.cpp  Sphere3.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  gl.cpp  half.c  half.cpp  main.cpp
docs/functions/: box.rst  color.rst  frame.rst  gl.rst  glu.rst  half_c.rst  limits.rst  line.rst  matrix.rst  random.rst  roots.rst  vec.rst
src/CImath/: CMakeLists.txt  chalf.cpp  chalf.h
src/CImathTest/: CMakeLists.txt  main.cpp  testCImath.c  testCImath.cpp  testHalf.cpp  testHalf.h
src/Imath/: CMakeLists.txt  ImathBaseTypes.h  ImathBox.h  ImathBoxAlgo.h  ImathColor.h  ImathColorAlgo.cpp  ImathColorAlgo.h  ImathEuler.h  ImathExport.h  ImathForward.h  ImathFrame.h  ImathFrustum.h  ImathFrustumTest.h  ImathFun.cpp  ImathFun.h  ImathGL.h  ImathGLU.h  ImathHalfLimits.h  ImathInt64.h  ImathInterval.h  ImathLimits.h  ImathLine.h  ImathLineAlgo.h  ImathMath.h  ImathMatrix.h  ImathMatrixAlgo.cpp  ImathMatrixAlgo.h  ImathNamespace.h  ImathPlane.h  ImathPlatform.h  ImathQuat.h  ImathRandom.cpp  ImathRandom.h  ImathRoots.h  ImathShear.h  ImathSphere.h  ImathTypeTraits.h  ImathVec.cpp  ImathVec.h  ImathVecAlgo.h  (+7 more)
src/ImathTest/: CMakeLists.txt  ImathTestConfig.h.in  half_c_main.c  half_perf_test.cpp  main.cpp  testArithmetic.cpp  testArithmetic.h  testBitPatterns.cpp  testBitPatterns.h  testBox.cpp  testBox.h  testBoxAlgo.cpp  testBoxAlgo.h  testClassification.cpp  testClassification.h  testColor.cpp  testColor.h  testError.cpp  testError.h  testExtractEuler.cpp  testExtractEuler.h  testExtractSHRT.cpp  testExtractSHRT.h  testFrustum.cpp  testFrustum.h  testFrustumTest.cpp  testFrustumTest.h  testFun.cpp  testFun.h  testFunction.cpp  testFunction.h  testInterop.cpp  testInterop.h  testInterval.cpp  testInterval.h  testInvert.cpp  testInvert.h  testJacobiEigenSolver.cpp  testJacobiEigenSolver.h  testLimits.cpp  (+38 more)
src/nanobind/NanobindImath/: CMakeLists.txt  NanobindImath.h  NanobindImath.pc.in  NanobindImathBox.cpp  NanobindImathExport.h  NanobindImathVec.cpp  nanobindimathmodule.cpp
src/pybind11/: CMakeLists.txt  PybindEuler.java
src/pybind11/PyBindImath/: CMakeLists.txt  PyBindImath.h  PyBindImath.pc.in  PyBindImathBox.cpp  PyBindImathEuler.cpp  PyBindImathExport.h  PyBindImathFrustum  PyBindImathFrustum.cpp  PyBindImathFun.cpp  PyBindImathLine.cpp  PyBindImathMatrix.cpp  PyBindImathMatrix44.cpp  PyBindImathPlane.cpp  PyBindImathQuat.cpp  PyBindImathRandom.cpp  PyBindImathShear.cpp  PyBindImathVec.cpp  PyBindImathVec.h  PyBindImathVec2.cpp  PyBindImathVec3.cpp  PyBindImathVec4.cpp  pybindimathmodule.cpp
src/pybind11/PyBindImathTest/: CMakeLists.txt  pyBindImathTest  pyBindImathTest.py  test_import_pybindimath.py
src/pybind11/test/: test_frustum.py
src/python/: CMakeLists.txt  PyImath.pc.in
src/python/PyBindImath/: CMakeLists.txt  PyImath.h  PyImathBox.cpp  PyImathExport.h  PyImathVec.cpp  imathmodule.cpp
src/python/PyImath/: CMakeLists.txt  PyImath.cpp  PyImath.h  PyImath.pc.in  PyImathAPI.h  PyImathAutovectorize.cpp  PyImathAutovectorize.h  PyImathBasicTypes.cpp  PyImathBasicTypes.h  PyImathBox.cpp  PyImathBox.h  PyImathBox2Array.cpp  PyImathBox3Array.cpp  PyImathBoxArrayImpl.h  PyImathBufferProtocol.cpp  PyImathBufferProtocol.h  PyImathColor.h  PyImathColor3.cpp  PyImathColor3ArrayImpl.h  PyImathColor4.cpp  PyImathColor4Array2DImpl.h  PyImathColor4ArrayImpl.h  PyImathDecorators.h  PyImathEuler.cpp  PyImathEuler.h  PyImathExport.h  PyImathFixedArray.cpp  PyImathFixedArray.h  PyImathFixedArray2D.h  PyImathFixedArrayTraits.h  PyImathFixedMatrix.h  PyImathFixedVArray.cpp  PyImathFixedVArray.h  PyImathFrustum.cpp  PyImathFrustum.h  PyImathFun.cpp  PyImathFun.h  PyImathFunOperators.h  PyImathLine.cpp  PyImathLine.h  (+43 more)
src/python/PyImathNumpy/: CMakeLists.txt  imathnumpymodule.cpp
src/python/PyImathNumpyTest/: CMakeLists.txt  pyImathNumpyTest.in  pyImathNumpyTest.py  test_import_imathnumpy.py
src/python/PyImathPythonTest/: CMakeLists.txt  RunTests.py  test_m44.py  test_v3.py  todo_m44.py
src/python/PyImathSpeedTest/: pyImathSpeedTest.in
src/python/PyImathTest/: CMakeLists.txt  main.cpp  pyImathTest.in  pyImathTest.py  testStringTable.cpp  testStringTable.h  test_import_imath.py
src/python/config/: CMakeLists.txt  ModuleDefine.cmake  PyImathConfig.h.in  (+3 more)
(+213 files in other folders)
